--- a/Bloch2D/CMakeLists.txt
+++ b/Bloch2D/CMakeLists.txt
@@ -13,6 +13,9 @@ set(SOURCE_FILES1
     src/Quad.cpp
     src/Material.cpp
     src/Quad2.cpp
+    src/Quad3.cpp
+    src/Quad4.cpp
+    src/Quad5.cpp
 )
 
 set(SOURCE_FILES2
@@ -23,13 +26,17 @@ set(INCLUDE_FILES
     include/Quad.h
     include/Material.h
     include/matplotlibcpp.h
-    include/Quad2.h)
+    include/Quad2.h
+    include/Quad3.h
+    include/Quad4.h
+    include/Quad5.h
+)
 
-add_executable(PhononXFEM ${SOURCE_FILES2} ${INCLUDE_FILES} )
+add_executable(PhononXFEM ${SOURCE_FILES1} ${INCLUDE_FILES} )
 
-#add_executable(PlotDispersion ${SOURCE_FILES2} ${INCLUDE_FILES})
+add_executable(PlotDispersion ${SOURCE_FILES2} ${INCLUDE_FILES})
 
 find_package(PythonLibs REQUIRED)
 include_directories(${PYTHON_INCLUDE_DIRS})
 target_link_libraries(PhononXFEM ${PYTHON_LIBRARIES})
-#target_link_libraries(PlotDispersion ${PYTHON_LIBRARIES})
+target_link_libraries(PlotDispersion ${PYTHON_LIBRARIES})
